added paragraph to body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio tempora aliquid quos rerum omnis iste hic voluptatum, et ipsa quasi nihil laudantium, dolore ea iure consequatur? Rem, nostrum hic sunt modi praesentium atque tenetur amet maxime nobis aspernatur vitae cum! Dolores ipsum quidem nisi aliquam quaerat minima sint porro illo corrupti animi! Officia, voluptate delectus ipsa maiores magni veritatis iste? Porro dolore delectus possimus cumque autem, incidunt illum a sed tempora eligendi animi repellendus. Architecto inventore doloribus fugit quae libero. Quidem porro nostrum blanditiis sunt obcaecati eius et velit officiis amet. Consequatur nulla minus qui deleniti rerum corrupti ut! Ea?
+    </p>
 </body>
 </html>
